--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   shared_preferences: ^2.2.2
   connectivity: ^3.0.6
   http: ^0.13.3
+  flutter_launcher_icons: ^0.13.1
+  simple_gradient_text: 1.3.0
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
@@ -53,6 +56,25 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  image_path_android: "assets/images/logo.png"
+  image_path_ios: "assets/images/logo.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+  background_color_ios: "#ffffff"
+  image_path: "assets/images/logo.png"
+  web:
+    generate: true
+    image_path: "assets/images/logo.png"
+    background_color: "#ffffff"
+    theme_color: "#hexcode"
+  macos:
+    generate: true
+    image_path: "assets/images/logo.png"
+
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -87,8 +109,28 @@ flutter:
           weight: 700
     - family: Gilroy
       fonts:
-        - asset: assets/fonts/Gilroy.ttf
+        - asset: assets/fonts/Gilroy-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Gilroy-Black.ttf
           weight: 700
+        - asset: assets/fonts/Gilroy-Heavy.ttf
+          weight: 900
+        - asset: assets/fonts/Gilroy-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Gilroy-Light.ttf
+          weight: 300
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Montserrat-Black.ttf
+          weight: 700
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 400
+        - asset: assets/fonts/Montserrat-Light.ttf
+          weight: 300
     - family: NotoSerif
       fonts:
         - asset: assets/fonts/NotoSerif-Regular.ttf
@@ -103,3 +145,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
